Adjusts fixed menu on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,11 @@ a:visited {
 }
 
 /* line 1, ../sass/_header.scss */
+.js-fixed-menu .header {
+  margin: 0 0 61px 0;
+}
+
+/* line 6, ../sass/_header.scss */
 .header {
   float: left;
   position: relative;
@@ -22,9 +27,8 @@ a:visited {
   background: #222222;
   padding: 180px 0 85px 0;
   overflow: hidden;
-  margin: 0 0 61px 0;
 }
-/* line 12, ../sass/_header.scss */
+/* line 16, ../sass/_header.scss */
 .header:after {
   top: 0;
   content: ' ';
@@ -36,7 +40,7 @@ a:visited {
   background: #000000;
   opacity: 0.6;
 }
-/* line 25, ../sass/_header.scss */
+/* line 29, ../sass/_header.scss */
 .header video {
   position: absolute;
   top: 0;
@@ -45,7 +49,7 @@ a:visited {
   background: url(images/background.jpg) no-repeat center center;
   background-size: cover;
 }
-/* line 35, ../sass/_header.scss */
+/* line 39, ../sass/_header.scss */
 .header h2 {
   position: relative;
   z-index: 4;
@@ -57,11 +61,11 @@ a:visited {
   font-family: "Open Sans", sans-serif;
   margin: 0 20px 80px 20px;
 }
-/* line 47, ../sass/_header.scss */
+/* line 51, ../sass/_header.scss */
 .header h2 strong {
   font-weight: 600;
 }
-/* line 53, ../sass/_header.scss */
+/* line 57, ../sass/_header.scss */
 .header a {
   position: relative;
   z-index: 4;
@@ -77,15 +81,21 @@ a:visited {
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
   transition: box-shadow 300ms;
 }
-/* line 69, ../sass/_header.scss */
+/* line 73, ../sass/_header.scss */
 .header a:hover {
   box-shadow: 0 0 18px #ffffff;
 }
 
-/* line 1, ../sass/_menu.scss */
+/* line 2, ../sass/_menu.scss */
+.js-fixed-menu .menu {
+  position: fixed;
+  top: 0;
+  z-index: 100;
+}
+
+/* line 9, ../sass/_menu.scss */
 .menu {
-  position: absolute;
-  top: 461px;
+  float: left;
   width: 100%;
   background: #000000 url(images/icon.png) no-repeat 18px 10px;
   font-weight: 300;
@@ -93,14 +103,8 @@ a:visited {
   font-family: "Open Sans Condensed", sans-serif;
   padding: 0 0 20px 0;
 }
-/* line 12, ../sass/_menu.scss */
-.menu.js-fixed {
-  position: fixed;
-  top: 0;
-  z-index: 100;
-}
 @media screen and (max-width: 700px) {
-  /* line 1, ../sass/_menu.scss */
+  /* line 9, ../sass/_menu.scss */
   .menu {
     padding: 0 0 8px 0;
   }
